--- a/dvc.yaml
+++ b/dvc.yaml
@@ -5,9 +5,8 @@ stages:
     - data
     - train.py
     outs:
-    - bottleneck_features_train.npy
-    - bottleneck_features_validation.npy
     - model.h5
-    metrics:
-    - metrics.csv:
-        cache: false
+    live:
+      training_metrics:
+        summary: true
+        html: true
